--- a/pandas/03.01-Introducing-Pandas-Objects.ipynb
+++ b/pandas/03.01-Introducing-Pandas-Objects.ipynb
@@ -390,6 +390,7 @@
    "metadata": {},
    "source": [
     "By default, a ``Series`` will be created where the index is drawn from the sorted keys.\n",
+"It is not sorted by default. Use .sort_index() function to sort it",
     "From here, typical dictionary-style item access can be performed:"
    ]
   },
